--- a/de/index.liquid
+++ b/de/index.liquid
@@ -2,7 +2,7 @@
 layout: snake.liquid
 lang: de
 title: Data Stranding
-description: A minimal, single file web app for creating beautiful data sheets
+description: Eine minimalistische Webandwendung zum Erstellen von ästhetisch anspruchsvollen Datasheets
 font: iA Writer Mono
 dialog: Gespeicherte Sheets
 nav:
@@ -38,4 +38,12 @@ actions:
   toggle:
     label: Sichtbarkeit
     title: Sichtbarkeit toggeln
+footer:
+  by: Gebastelt von
+  locales:
+    - url: /
+      label: English
+    - url: /jp
+      label: 日本語
+  source: Quellcode auf GitHub einsehen
 ---
