--- a/index.liquid
+++ b/index.liquid
@@ -2,7 +2,7 @@
 layout: snake.liquid
 lang: en
 title: Data Stranding
-description: A minimal, single file web app for creating beautiful data sheets
+description: A minimal, single purpose, single page web app for creating beautiful data sheets
 font: iA Writer Mono
 dialog: Saved sheets
 nav:
@@ -38,4 +38,12 @@ actions:
   toggle:
     label: Visibility
     title: Toggle Visibility
+footer:
+  by: Brought to you by
+  locales:
+    - url: /de
+      label: Deutsch
+    - url: /jp
+      label: 日本語
+  source: View on GitHub
 ---
