--- a/jp/index.liquid
+++ b/jp/index.liquid
@@ -38,6 +38,14 @@ actions:
   toggle:
     label: ON/OFF
     title: Toggle Visibility
+footer:
+  by: 作者
+  locales:
+    - url: /
+      label: English
+    - url: /de
+      label: Deutsch
+  source: ソースはGitHubへ
 ---
 
 <style>
