--- a/de/index.liquid
+++ b/de/index.liquid
@@ -45,5 +45,7 @@ footer:
       label: English
     - url: /jp
       label: 日本語
+    - url: /cn
+      label: 中文
   source: Quellcode auf GitHub einsehen
 ---
